--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1381,7 +1381,10 @@ section,
 
 .team .team-member .member-img {
   position: relative;
+  width: 100%;
+  height: 300px; /* Set a fixed height */
   overflow: hidden;
+  border-radius: 8px;
 }
 
 .team .team-member .social {
